# ericosur-snippet

./: .gitignore  .gitmodules  .ignore  README.md  SUBMODULES.md  a005117.pl  a194156.pl  anafl.pl  cr.pl  date-string-example.sh  debit.py  dp2px.py  py  py_template  pylintrc  rb  tmplate.py  two.lg
Backup/: TestMax.tgz  getdll.tgz
C/: .gitignore  .ignore  CameraApp.c.bfe  aes_openssl.c  bubblesort.c  convert_launcher.cpp  fib.c  friend.cpp  hel.cpp  hello_world.cpp  int2str.f  makefile.qsort  memmove.c  mul.cpp  seeif.c  std-string-substr.cpp  stdcver.c  str2int.f  testid3v2.cpp  ucs2_to_utf8.c  vecdemo.cpp  vprint.c
C/argh/: CMakeLists.txt  README.md  main.cpp
C/c11/: .gitignore  CMakeLists.txt  Makefile  README.md  arm201405.txt  armlinux.txt  c11.cpp  c14.cpp  foo.h  main.cpp  myalarm.cpp  myinc.cpp  myinc.h  mytimer.cpp  poky.txt
C/c11/c14/: CMakeLists.txt  cpp14.cpp
C/c11/readln/: CMakeLists.txt  rl.c
C/dow/: CMakeLists.txt  README.md  Readme.md  dow-test.json  dow.cpp  dow.h  dow.py  main.cpp
C/eten/: .gitignore  CMakeLists.txt  README.md  Readme.md  fontutil.cpp  fontutil.h  main.cpp  readme.md  setting.json  test.cpp  test.h  try_iconv.cpp  try_iconv.h  uint24_t.h
C/fmt_demo/: CMakeLists.txt  README.md  Readme.md  main.cpp  tests.cpp  tests.h
C/freeimage/: CMakeLists.txt  README.txt  enlarge.c
C/gflags/: CMakeLists.txt  demo.cpp
C/hex/: CMakeLists.txt  charutil.cpp  charutil.h  main.cpp  readme.md
C/iconv/: CMakeLists.txt  Makefile  Readme.md  go.sh  readme.md  try_iconv.cpp
C/is_alac/: CMakeLists.txt  Makefile  README.md  aac.m4a  alac.m4a  flac.flac  is_alac.cpp  list.txt  t.sh  test_by_list.sh
C/md5test/: .gitigore  CMakeLists.txt  Makefile  main.cpp  toolbox.cpp  toolbox.h
C/member_function_pointer/: .gitignore  CMakeLists.txt  Makefile  README.md  foo.cpp  foo.h  main.cpp
C/rc4_encrypt/: .gitignore  CMakeLists.txt  Makefile  README.txt  ReadHeader.cpp  Readme.md  ToolBox.cpp  makefile  md5main.cpp  mydec.cpp  myenc.cpp  openssl.dox  rc4main.cpp
C/rc4_encrypt/doc/: CMakeLists.txt  Doxyfile.in
C/rc4_encrypt/dox/: html.rar
C/rc4_encrypt/lib/: CMakeLists.txt  toolbox.cpp  toolbox.hpp
C/simple_test/: CMakeLists.txt  Readme.md  boss.c  box-muller.md  boxmuller.cpp  delete_null.cpp  e.cpp  fib.c  foo.cpp  getret.cpp  hello_tester.cpp  hello_world.cpp  hexdec.cpp  jvs.c  jvs.h  min.cpp  nullptr.cpp  readme.md  rfind.cpp  shift.cpp  sss.cpp  test.json  test_func.cpp  test_func.h  test_json.cpp  test_json.h  test_jvs.c  validate_utf8.cpp  worker.c
C/stl/: CMakeLists.txt  Readme.md  dist.cpp  intersection.cpp  min.cpp  shuffle.cpp  sortfoo.cpp
C/testmem/: CMakeLists.txt  ndk.txt  testmemcpy.c  testmemset.c
C/to_string/: CMakeLists.txt  Makefile  Makefile.2014  Makefile.arm  README.md  Readme.md  arm.txt  armlinux.txt  c.c  main.cpp  v2d.cpp
C/zlib/: CMakeLists.txt  buffy.c
Gutenberg/: 00readme.txt  README.md  extract-word.pl  pgfiles.tar.xz
Gutenberg古騰堡/: build-all.bat  clean-all.bat  combine-word.pl  extract-word.pl  fourchar.pl
ImageMagick/: .gitignore  00Readme.md  README.md  check_rotate.pl  coll.pl  crop320x240.pl  draw_random.pl  dropdown.bat  geosketch.json  geosketch.pl  gm_quatrefoilv.pl  gm_size.pl  gonef.pl  img_draw.pl  img_jpg2png.pl  img_resize_sign.pl  img_sign.pl  img_size.pl  img_thumb.pl  mk-android-wallpaper.pl  quatrefoil.pl  quatrefoil_vertical.pl  randpix-800x600.pl  randpix.pl  resz.pl  rgb.pl  setting.json  side-by-side.py  sieve.ini  sieve.pl  sync_exif_ctime.pl  twitter-timecard.pl
Tcl/: 3rd.tcl
TestMax/: 00howto.txt  Changes  MANIFEST  Makefile  Makefile.PL  README  TestMax.c  TestMax.def  TestMax.xs  dll.base  dll.exp  ppport.h
Topics/: README.md
WSH/: blackfri.vbs  chchch.js  cnt_ch.js  conv.js  emome_cnt.js  forloop.bat  getphysicalmem.pl  getserv.pl  hello.js  list_services.vbs  mailto.vbs  physicalmem.vbs  qserv.vbs  sendm.vbs  ssoutlok.vbs
Workfile/: GetApId.pl  TS.BAT  addlis.pl  addnum2imgres.pl  btr.pl  catcher2ethereal.pl  change-string.pl  clang+arm.sh  cmaketool.txt  confirm_prop.pl  copy_daily.pl  countyosecommit.pl  cp-localimg.sh  cpp2b.pl  depath.pl  dirage.pl  edin  edlc  fetchdir.sh  gen_emn.pl  gen_network_list.pl  getcts.pl  grepout.py  hack-adb.sh  hack-prop.pl  idm.pl  insert_ifdef_endif.pl  inv.sh  kdir.pl  kill_apple.bat  ls_smb.pl  m2-stat.pl  modm.pl  my_get_cts_report.pl  mynm.pl  new-av.sh  norefs.pl  normalize.pl  orphanimg.pl  parse_dailylog.pl  (+24 more)
android/: hdmi-plug.patch
autohotkey/: awake.bat  keepawake.ahk
bin2hex/: .gitignore  Makefile  README.md  bin2CarrayEx.bat  bin2hex.pl  example.c  usage.txt
char_encoding/: 00readme.txt  5c5c.pl  Unihan.txt.REMOVED.git-id  big2003.pl  big5-text-io-demo.pl  big5.pl  big5_cp950(13503).txt  bigfive2003table.pl  charutil.pl  chn-1.pl  chn-2.pl  count_big5_char.pl  diff-out.txt  encoding-tw.pl  extract_big5.pl  extract_big5.txt  extract_kgb0.pl  gb18030_4b.pl  gb18030_table.pl  gb2312_to_ucs2_table.txt  gb2ucs2.pl  gen_big5.pl  guess_file_encoding.pl  hk-u8.pl  show_diff.pl  strok.txt  stroke_range.txt  u2b.pl  ucs2_to_gb2312_table.txt  ucs2tab.pl  utf8-iconv.txt  utf8-unicode.pl  utf8_char_note.pl  utf_ucs.pl  zh.txt  zh2bpmf.pl
db/: dbi_sql.pl  sql-ex.pl  sql_md5.pl
deck/: 00readme.txt  (+18 more)
opencv/blend/: CMakeLists.txt  Readme.md  blend.cpp  build.sh  cat.cpp
opencv/blur/: CMakeLists.txt  Readme.md  blur.pro  build.sh  main.cpp  readme.md  setting.json
opencv/blur/cvcli/: cvcli.pro  cvcli.pro.user.4c193f8  cvcli.pro.user.f668cd4  main.cpp
opencv/cvcap/: CMakeLists.txt  Readme.md  Source.cpp  build.sh  main.cpp  qrcode.cpp  readme.md
opencv/cvcap/qcvcap/: MainForm.ui.qml  Source.cpp  main.cpp  main.qml  qcvcap.pro
opencv/ellipse/: CMakeLists.txt  Readme.md  drawtext.cpp  drawutil.cpp  drawutil.h  hsv2rgb.cpp  hsv2rgb.h  imghash.cpp  kal.cpp  main.cpp
opencv/faced/: CMakeLists.txt  faceDemo.cpp  face_demo.cpp  faced.pro  main.cpp  setting.json
opencv/imdecode/: CMakeLists.txt  img_encode.txt  main.cpp
opencv/opencv_version/: CMakeLists.txt  Readme.md  main.cpp
opencv/tapi/: CMakeLists.txt  main.cpp
(+2916 files in other folders)
