cmake_minimum_required(VERSION 3.0)

project(easytest)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_VERBOSE_MAKEFILE OFF)
set(CMAKE_CXX_FLAGS "-Wall -O3")
set(CMAKE_C_FLAGS "-Wall -O3")

add_executable(rfind rfind.cpp)
add_executable(getret getret.cpp)
add_executable(gete gete.cpp)
add_executable(hello_world hello_world.cpp)
add_executable(mul mul.cpp)
add_executable(fib fib.c)
add_executable(memmove memmove.c)
add_executable(delete_null  delete_null.cpp)
add_executable(shift  shift.cpp)
